--- a/cartos-interface/package.json
+++ b/cartos-interface/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
+    "google-auth-library": "^7.0.3",
     "jw-vue-pagination": "^1.0.3",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
