--- a/cartos-interface/.env
+++ b/cartos-interface/.env
@@ -1,2 +1,2 @@
-VUE_APP_I18N_LOCALE=pt
-VUE_APP_I18N_FALLBACK_LOCALE=pt
+VUE_APP_URL= 'https://tommi2.di.uminho.pt/api'
+#VUE_APP_URL= 'http://localhost:5000'
