pesquisas realizadas e gestão de users a dar

--- a/cartos-interface/.env
+++ b/cartos-interface/.env
@@ -1,2 +1,2 @@
-VUE_APP_URL= 'https://tommi2.di.uminho.pt/api'
-#VUE_APP_URL= 'http://localhost:5000'
+VUE_APP_URL= 'http://cartos.di.uminho.pt/api'
+#VUE_APP_URL= 'http://localhost:5002'
