--- a/cartos-interface/package.json
+++ b/cartos-interface/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.4",
+    "csv-file-validator": "^1.10.4",
     "google-auth-library": "^7.0.3",
     "hooper": "^0.3.4",
     "jw-vue-pagination": "^1.0.3",
